# rust-api

./: Cargo.toml
data/: movie.json
src/: main.rs
src/db/: mod.rs
src/model/: mod.rs
